--- a/MangaWorld_admin/MangaWorld_admin/Views/Mangas/Edit.cshtml
+++ b/MangaWorld_admin/MangaWorld_admin/Views/Mangas/Edit.cshtml
@@ -54,6 +54,7 @@
             <div class="col-md-10">
                 @Html.DropDownList("AuthorId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AuthorId, "", new { @class = "text-danger" })
+                <a href="@Url.Action("Create", "Authors")">Add new author</a>
             </div>
         </div>
 
@@ -70,6 +71,7 @@
             <div class="col-md-10">
                 @Html.DropDownList("LanguageId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.LanguageId, "", new { @class = "text-danger" })
+                <a href="@Url.Action("Create", "Languages")">Add new language</a>
             </div>
         </div>
 
