--- a/MangaWorld_admin/MangaWorld_admin/Views/Shared/_Layout.cshtml
+++ b/MangaWorld_admin/MangaWorld_admin/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Manga", "Index", "Mangas")</li>
+                    <li>@Html.ActionLink("Scan Teams", "Index", "ScanTeams")</li>
+                    <li>@Html.ActionLink("Authors", "Index", "Authors")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
